# EasyPack

./: .gitignore  CLAUDE.md  README.md  float.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.2-MILESTONE-AUDIT.md
.planning/debug/: command-0x80070002.md  custom-command-save-and-style.md  dialog-and-tray-display-bugs.md  edge-snap-hide-fail.md  float-toggle-close-bugs.md  folder-size-mismatch.md  phase12-tray-settings.md  project-icon-scan-broken.md  terminal-0x80070002.md  tray-main-float-close.md  win-icon-tray-taskbar.md  windows-icon-display.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md
.planning/research/: ARCHITECTURE-v2.md  ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/spikes/: MANIFEST.md
scripts/: sync-version.js
src/: App.tsx  float-main.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  project_info.rs  shell.rs  update.rs
src/components/: AddFileDialog.tsx  CommandCard.tsx  CommandDialog.tsx  DiffStatusBar.tsx  DiffViewDialog.tsx  EnvSelectDialog.tsx  EnvSwitchBar.tsx  EnvTabBar.tsx  FileEditorDialog.tsx  FileList.tsx  FloatApp.tsx  MainArea.tsx  ManageEnvDialog.tsx  MissingFilePlaceholder.tsx  ProjectSettingsDialog.tsx  ScriptEditor.tsx  SettingsDialog.tsx  ShortcutPanel.tsx  Sidebar.tsx  SnapIndicator.tsx  SyncDiffButton.tsx  TitleBar.tsx
src/hooks/: useBatchDetect.ts  useCodeMirror.ts  useDiffState.ts  useEdgeDrawer.ts  useFloatWindow.ts  useGlobalShortcuts.ts  useKeyboard.ts  useProject.ts  useRecentCommands.ts  useShortcutActions.ts  (+3 more)
(+314 files in other folders)
