[package]
name = "easypack"
version = "0.1.0"
description = "A Windows desktop project quick command launcher"
authors = ["you"]
edition = "2021"

[lib]
name = "easypack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.2"
