[package]
name = "easypack"
version = "0.1.0"
description = "A Windows desktop project quick command launcher"
authors = ["you"]
edition = "2021"

[lib]
name = "easypack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
image = "0.25"
reqwest = { version = "0.13", features = ["json"] }
semver = "1"
open = "5"
tempfile = "3"

[dev-dependencies]
tokio = { version = "1", features = ["rt"] }
